@@ -19,12 +19,10 @@
  */
 package com.kunzisoft.keepass.database.element
 
-import android.graphics.Bitmap
-import android.graphics.BitmapFactory
 import android.os.Parcel
 import android.os.Parcelable
 import com.kunzisoft.keepass.database.element.database.BinaryFile
-import kotlinx.coroutines.*
+
 
 data class Attachment(var name: String,
                       var binaryFile: BinaryFile) : Parcelable {
@@ -67,29 +65,6 @@ data class Attachment(var name: String,
 
         override fun newArray(size: Int): Array<Attachment?> {
             return arrayOfNulls(size)
-        }
-
-        fun loadBitmap(attachment: Attachment,
-                       binaryCipherKey: Database.LoadedKey?,
-                       actionOnFinish: (Bitmap?) -> Unit) {
-            CoroutineScope(Dispatchers.Main).launch {
-                withContext(Dispatchers.IO) {
-                    val asyncResult: Deferred<Bitmap?> = async {
-                        runCatching {
-                            binaryCipherKey?.let { binaryKey ->
-                                var bitmap: Bitmap?
-                                attachment.binaryFile.getUnGzipInputDataStream(binaryKey).use { bitmapInputStream ->
-                                    bitmap = BitmapFactory.decodeStream(bitmapInputStream)
-                                }
-                                bitmap
-                            }
-                        }.getOrNull()
-                    }
-                    withContext(Dispatchers.Main) {
-                        actionOnFinish(asyncResult.await())
-                    }
-                }
-            }
         }
     }
 }
