@@ -21,6 +21,7 @@
 	<dimen name="default_margin">18dp</dimen>
     <dimen name="image_button_margin">8dp</dimen>
     <dimen name="image_list_margin">12dp</dimen>
+    <dimen name="image_preview_height">144dp</dimen>
     <dimen name="button_margin">6dp</dimen>
     <dimen name="card_view_margin">12dp</dimen>
     <dimen name="card_view_padding">14dp</dimen>
