@@ -3,6 +3,7 @@ KeePassDX(2.9.14)
  * Dark Themes #532 #714
  * Fix binary deduplication #715
  * Fix IconId #901
+ * Resize image stream dynamically to prevent slowdown #919
  * Small changes #795 #900 #903 #909 #914
 
 KeePassDX(2.9.13)
